--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@revenuecat/purchases-js": "^0.16.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.39.3",
     "lucide-react": "^0.344.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.1",
     "stripe": "^17.6.0",
+    "supabase": "^2.9.6",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
