--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@revenuecat/purchases-js": "^0.16.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.39.3",
+    "humanize-ai-text": "^1.0.5",
     "lucide-react": "^0.344.0",
     "openai": "^4.28.0",
     "react": "^18.3.1",
