--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.22.1",
     "stripe": "^17.6.0",
     "supabase": "^2.9.6",
