--- a/vercel.json
+++ b/vercel.json
@@ -19,10 +19,28 @@
       "dest": "/api-serverless/$1.ts"
     },
     {
-      "handle": "filesystem"
+      "src": "^/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "^/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "^/robots.txt",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|json))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
+      "status": 200,
       "dest": "/index.html"
     }
   ],
