--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api-serverless/:path*.ts" },
     { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  }
 } 
