--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.2",
     "stripe": "^17.6.0",
     "supabase": "^2.9.6",
     "zustand": "^4.5.1"
